@@ -11,6 +11,8 @@ Version 1.3.1+svn:
       * Updated images for Delfador.
       * Made the narrator talk about gryphons at the end of Northern Winter only
         if the player has actually gotten the eggs.
+    * The Rise of Wesnoth
+      * 'Temple in the Deep' often crashed when the Lich killed a unit.
     * Tutorial
       * Updated all unit images that are used in the tutorial to fit the
         originals used in httt.
