@@ -76,6 +76,8 @@ Version 1.3.1+svn:
    * fixed [special_filter] not working properly (#8212)
    * fixed [variables] not working properly for Multiplayer mode
    * new [set_menu_item] action, to allow custom WML items in the context menu
+   * fixed a crash when a WML event killed a unit while dying in an attack
+     which the attack engine didn't expect (bug #8814)
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
